--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,4 +1,4 @@
-name: build-and-release
+name: goreleaser
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
       - name: set up go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
+          go-version: 1.17
 
       - name: cache go modules
         uses: actions/cache@v1
@@ -34,6 +34,12 @@ jobs:
 
       - name: tests modules
         run: |
+          go mod vendor
+          if [ ! -z "$(git status --porcelain)" ]; then
+            echo "::error::vendor directory if not synched with go.mod, please run go mod vendor"
+            exit 1
+          fi
+
           go mod tidy
           if [ ! -z "$(git status --porcelain)" ]; then
             echo "::error::modules are not tidy, please run go mod tidy"
