--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 project_name: aggregadantur
 
 builds:
@@ -22,10 +23,8 @@ builds:
       - amd64
 
 archives:
-  - id: archives
-    builds:
-      - binary
-    format: "tar.gz"
+  - ids: [archives, binary]
+    formats: [ 'tar.gz' ]
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
     wrap_in_directory: true
     files:
