--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -55,7 +55,7 @@ jobs:
         if: success() && startsWith(github.ref, 'refs/tags/')
         with:
           version: v2.13.1
-          args: release
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USER: github-actions
